# strathmore_Konectika_ai_streamlit

./: 1_🏴󠁲󠁯󠁣󠁶󠁿_app.py  app.py  pyproject.toml  requirements.txt
pages/: 1_🏢_job_chat.py  2_🤷‍♀️_about.py  3_📱_contacts.py
templates/: cv_revision_01.html
utils/: html_to_pdf.py
utils/file_display/: pdf_display.py
utils/ui/: cards.py
